tests/NormalTests/paczka1/fuzzy1/73641711.err
Error in line 1: S478 S69 9,9
Error in line 13: VAKRgztN S69 27,2
Error in line 24: S478 S69 466,0
Error in line 29: VAKRgztN A969 89,0
